--- a/angular.json
+++ b/angular.json
@@ -94,6 +94,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/swiper/swiper-bundle.css",
               "src/styles.scss"
             ],
             "scripts": []
