--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "flexboxgrid": "^6.3.1",
     "rxjs": "~6.6.0",
     "swiper": "^6.5.0",
     "tslib": "^2.0.0",
